<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- FanWall -->
    <string name="romanblack_fanwall_camera_upper">Camera</string>
    <string name="romanblack_fanwall_gallery_upper">Gallery</string>
    <string name="romanblack_fanwall_from">from</string>
    <string name="romanblack_fanwall_or">or</string>
    <string name="romanblack_fanwall_map_point">author</string>

    <string name="romanblack_fanwall_have_an_account">I have an account</string>
    <string name="romanblack_fanwall_sign_up">Create new account</string>
    <string name="romanblack_fanwall_posted_by">posted by</string>

    <string name="romanblack_twitter_ptr_tap">Tap to refresh...</string>
    <string name="romanblack_twitter_ptr_release">Release to refresh...</string>
    <string name="romanblack_twitter_ptr_pull">Pull to refresh...</string>

    <string name="romanblack_fanwall_alert_failed_to_login">Failed to login.</string>
    <string name="romanblack_fanwall_alert_cannot_init_camera">Cannot initialize camera.</string>
    <string name="romanblack_fanwall_alert_take_pic_before_sharing">You must take a picture before sharing.</string>
    <string name="romanblack_fanwall_alert_no_camera">Your device have no camera.</string>
    <string name="romanblack_fanwall_alert_camera_error">Camera error! Please try again.</string>
    <string name="romanblack_fanwall_alert_pic_sent">Thank you! Your picture has been sent.</string>
    <string name="romanblack_fanwall_alert_cant_load_comments">Cannot load comments.</string>
    <string name="romanblack_fanwall_alert_cant_view_profile">Cannot view this profile</string>
    <string name="romanblack_fanwall_alert_cant_select_image">This image cannot be selected</string>
    <string name="romanblack_fanwall_alert_big_text"><![CDATA[Text lenght must be < 150 characters]]></string>
    <string name="romanblack_fanwall_alert_empty_message">Cannot send empty comment</string>
    <string name="romanblack_fanwall_comments_title">Comments</string>
    <string name="romanblack_fanwall_wrong_auth_pass_login">Wrong fields content</string>
    <string name="romanblack_fanwall_gallery">Gallery</string>
    <string name="directoryplugin_email_found_this">I just found this in the</string>
    <string name="directoryplugin_email_download_this">Download the</string>
    <string name="directoryplugin_email_android_iphone_app">iPhone/Android app</string>
    <string name="directoryplugin_email_posted_via">Posted via</string>

    <string name="fanwall_post_upper">Post</string>
    <string name="fanwall_email">Email</string>
    <string name="romanblack_fanwall_dialog_save_image">Are you sure you want to save current image?</string>
    <string name="wall">Wall</string>
    <string name="map">Map</string>
    <string name="photos">Photos</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="Click_the_button_below_to_create_one">Click the button below to create one.</string>
    <string name="send_message">Send message</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="common_clear_upper">Clear</string>
    <string name="fanwall_log_in_upper">Login</string>
    <string name="romanblack_fanwall_signup_failed">The username and password did not match our records, please try
        again
    </string>
    <string name="TermOfUse">By clicking on checkbox you are indicating that you have read and agree to the Terms of
        Use.
    </string>

    <string name="TextView">TextView</string>
    <string name="replies">Replies</string>
    <string name="there_are_no_comments">There are no comments yet.</string>
    <string name="post_your_comment">Post your comment!</string>
    <string name="post_a_reply">Post a reply</string>
    <string name="there_are_no_messages">There are no messages yet.</string>
    <string name="signup">Sign up</string>
    <string name="profile">Profile</string>
    <string name="last_message">Last message:</string>
    <string name="posts">posts</string>
    <string name="comments">comments</string>
    <string name="tap_to_refresh">Tap to refresh...</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="picture">Picture</string>
    <string name="zero_div_150">0/150</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="recent">Recent</string>
    <string name="nearme">Near me</string>
    <string name="cancel">Cancel</string>
    <string name="fanwall_post">Post</string>
    <string name="fanwall_talks">Talks</string>
    <string name="fanwall_add_comment">Add Comment</string>
    <string name="fanwall_map">Map</string>
    <string name="fanwall_photos">Photos</string>

    <string name="romanblack_twitter_date_seconds">sec</string>
    <string name="romanblack_twitter_date_minutes">m</string>
    <string name="romanblack_twitter_date_hour_ago">h</string>
    <string name="romanblack_twitter_date_days">d</string>
    <string name="twitter_date_format_item">MMM d</string>

    <string name="enable_gps_msg">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="send">Post</string>
    <string name="loading">Loading...</string>
    <string name="fanwall_alert_wrong_credential">Please, feel out email and password forms</string>
    <string name="fanwall_image_successfully_loaded">The picture has been saved to your phone</string>
    <string name="fanwall_alert_no_gps">Turn on location services to allow app to determine your location</string>
    <string name="directoryplugin_twitter_posted_success">The picture has been posted to your Twitter wall</string>
    <string name="directoryplugin_facebook_posted_success">The picture has been posted to your Facebook wall</string>
    <string name="directoryplugin_twitter_posted_error">The picture hasn\'t been posted to your Twitter wall</string>
    <string name="directoryplugin_facebook_posted_error">The picture hasn\'t been posted to your Facebook wall</string>
    <string name="fanwall_no_camera_permision">To use this function you need to switch ON Camera in application’s permissions</string>
    <string name="notification_error_ssl_cert_invalid">SSL error occurred. Would you like to proceed?</string>
    <string name="fw_continue">Continue</string>

    <plurals name="numberOfComments">
        <item quantity="zero">%d comments</item>
        <item quantity="one">%d comment</item>
        <item quantity="few">%d comments</item>
        <item quantity="many">%d comments</item>
        <item quantity="other">%d comments</item>
    </plurals>

    <plurals name="numberOfMessages">
        <item quantity="zero">%d posts</item>
        <item quantity="one">%d post</item>
        <item quantity="many">%d posts</item>
        <item quantity="other">%d posts</item>
        <item quantity="few">%d posts</item>
    </plurals>

</resources>
