<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:id="@+id/romanblack_fanwall_send_message_main">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:orientation="horizontal"
                  android:padding="5dp">

        <LinearLayout android:id="@+id/romanblack_fanwall_send_message_image_layout"
                      android:layout_width="150dp"
                      android:layout_height="fill_parent"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:paddingTop="5dp"
                      android:paddingLeft="5dp"
                      android:paddingRight="5dp"
                      android:paddingBottom="15dp">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:orientation="horizontal">

                <ImageView android:id="@+id/romanblack_fanwall_send_message_image"
                           android:layout_width="fill_parent"
                           android:layout_height="100dp"/>

            </LinearLayout>

            <Button android:id="@+id/romanblack_fanwall_sendmessage_removeimage_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/remove_photo"
                    android:background="@drawable/romanblack_fanwall_red_button"/>

        </LinearLayout>

        <EditText android:id="@+id/romanblack_fanwall_sendmessage_edittext"
                  android:layout_width="wrap_content"
                  android:layout_weight="1"
                  android:layout_height="fill_parent"
                  android:gravity="top"/>

    </LinearLayout>

    <LinearLayout android:layout_height="48dp"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:background="#66000000" android:gravity="center">

        <TextView android:id="@+id/romanblack_fanwall_sendmessage_clear_btn"
                  android:layout_height="fill_parent"
                  android:layout_width="wrap_content"
                  android:text="@string/common_clear_upper"
                  android:textSize="14sp"
                  android:gravity="center|center_vertical"
                  android:layout_weight="1" android:layout_gravity="center"/>

        <TextView android:id="@+id/romanblack_fanwall_sendmessage_cancelbtn"
                  android:layout_height="fill_parent"
                  android:layout_width="wrap_content"
                  android:src="@drawable/romanblack_fanwall_btn_cancel"
                  android:text="@string/cancel"
                  android:textSize="14sp"
                  android:gravity="center|center_vertical"
                  android:layout_weight="1"
                  android:layout_gravity="center"/>

        <TextView android:id="@+id/romanblack_fanwall_sendmessage_symbols_counter"
                  android:layout_height="fill_parent"
                  android:text="@string/zero_div_150"
                  android:layout_width="wrap_content"
                  android:layout_weight="1"
                  android:textColor="#ffffff"
                  android:gravity="center"
                  android:textSize="14sp"
                  android:layout_gravity="center"/>

        <ImageView android:id="@+id/romanblack_fanwall_sendmessage_image_photo"
                   android:layout_height="32dp"
                   android:layout_width="32dp"
                   android:src="@drawable/romanblack_fanwall_camera"
                   android:gravity="center_vertical"
                   android:layout_gravity="center"
                   android:contentDescription="pickAPhoto" android:layout_weight="1"/>

        <TextView android:id="@+id/romanblack_fanwall_sendmessage_post_btn"
                  android:layout_height="fill_parent"
                  android:layout_width="wrap_content"
                  android:paddingTop="0dp"
                  android:text="@string/fanwall_post_upper"
                  android:textSize="14sp"
                  android:layout_weight="1"
                  android:layout_gravity="center"
                  android:gravity="center"/>

    </LinearLayout>

</LinearLayout>
