<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
            
    <LinearLayout android:layout_height="50dp"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:background="@drawable/romanblack_fanwall_action_bar_bg"
                  android:gravity="center_vertical"
                  android:paddingLeft="5dp"
                  android:paddingRight="5dp"
                  android:paddingBottom="5dp"
                  android:paddingTop="5dp">

        <LinearLayout android:layout_height="27dp"
                      android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:paddingRight="5dp"
                      android:paddingLeft="5dp" 
                      android:background="@drawable/romanblack_fanwall_iphone_button">
            
            <TextView android:id="@+id/romanblack_fanwall_login_home"
                      android:layout_height="50dp"
                      android:layout_width="50dp"
                      android:src="@drawable/romanblack_fanwall_home" 
                      android:gravity="center" 
                      android:text="@string/back"/>
            
        </LinearLayout>

        <TextView android:layout_height="fill_parent"
                  android:layout_width="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/login"
                  android:textColor="#ffffff"
                  android:textSize="20dp"
                  android:textStyle="bold"
                  android:gravity="center"
                  android:paddingLeft="5dp"/>
                
        <LinearLayout android:layout_height="27dp"
                      android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:paddingRight="5dp"
                      android:paddingLeft="5dp" android:background="@drawable/romanblack_fanwall_iphone_button">
            
            <TextView android:id="@+id/romanblack_fanwall_emailsignup_btn_sugnup"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:src="@drawable/romanblack_fanwall_home" 
                      android:gravity="center"
                      android:text="@string/signup"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f3f3f3">
            
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical"
                      android:gravity="center_horizontal"
                      android:background="#f3f3f3"
                      android:paddingLeft="15dp"
                      android:paddingRight="15dp">
                
            <EditText android:id="@+id/romanblack_fanwall_emailsignup_fname"
                      android:layout_width="fill_parent"
                      android:layout_height="55dp"
                      android:lines="1"
                      android:singleLine="true"
                      android:layout_marginTop="30dp"/>
                
            <EditText android:id="@+id/romanblack_fanwall_emailsignup_lname"
                      android:layout_width="fill_parent"
                      android:lines="1"
                      android:singleLine="true"
                      android:layout_height="55dp"/>
                
            <EditText android:id="@+id/romanblack_fanwall_emailsignup_email"
                      android:layout_width="fill_parent"
                      android:lines="1"
                      android:singleLine="true"
                      android:layout_height="55dp"/>
                
            <EditText android:id="@+id/romanblack_fanwall_emailsignup_pwd"
                      android:layout_width="fill_parent"
                      android:layout_height="55dp"
                      android:layout_marginTop="25dp"
                      android:password="true"/>
                
            <EditText android:id="@+id/romanblack_fanwall_emailsignup_rpwd"
                      android:layout_width="fill_parent"
                      android:layout_height="55dp"
                      android:lines="1"
                      android:singleLine="true"
                      android:password="true"/>
                
            <LinearLayout android:id="@+id/romanblack_fanwall_emailsignup_layouttems"
                          android:layout_width="fill_parent"
                          android:layout_height="65dp"
                          android:orientation="horizontal"
                          android:gravity="center">
                    
                <TextView android:id="@+id/romanblack_fanwall_emailsignup_tvterms"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:text="@string/TermOfUse"/>
                    
                <CheckBox android:id="@+id/romanblack_fanwall_emailsignup_chbterms"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>
                    
            </LinearLayout>
            
        </LinearLayout>
    
    </ScrollView>
        
</LinearLayout>
